The Kid farmer added, Farmer prices page finalized
