# backend/Routes/FarmerAssetsRoute.ts
@@ -6,6 +6,7 @@ const router: Router = express.Router();
 // Endpoints to fetch Farmer asset prices
 router.get("/wolf-game-farmer-floor-price", farmerAssetPrices.getFarmerFloorPrice)
 router.get("/wolf-game-farmer-average-joe-price", farmerAssetPrices.getFarmerAverageJoePrice)
+router.get("/wolf-game-farmer-the-kid-price", farmerAssetPrices.getFarmerTheKidPrice)
 router.get("/wolf-game-farmer-above-average-jane-price", farmerAssetPrices.getFarmerAboveAverageJanePrice)
 router.get("/wolf-game-farmer-hundo-price", farmerAssetPrices.getFarmerHundoPrice)
 router.get("/wolf-game-farmer-diesel-price", farmerAssetPrices.getFarmerDieselPrice)
